spacing fixes

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -372,12 +372,8 @@ body {
 		margin-top: 4em;
 		margin-bottom: 3em;
 		text-align: center;
-		img {
-			margin-left: 1em;
-			text-align: justify;
-			height: 4em;
-			width: 4em;
-			display: inline-block;
+		a {
+			padding: 10px;
 		}
 	}
 	p {
